# bioguard_aixbio

./: .gitignore  README.md  bioguard_aixbio_submission.tex  bioguard_fellowship.tex  bioguard_hackathon.tex  pyproject.toml
artifacts/checks/: execution_state.json  protocol_lock.json
artifacts/conformance/: conformance_report.md  deviation_matrix.csv  deviation_matrix.json  deviation_matrix.schema.json  host_capability_profile.json  host_capability_profile.schema.json  host_capability_profile_host-2.json  host_capability_profile_host-3.json
artifacts/data/: biosession-500-dev.jsonl  biosession-500-test-synthetic.jsonl  biosession-500-test.jsonl  biosession-500-train.jsonl
artifacts/docs/: Limitations_DualUse.md  report_draft.md
artifacts/evidence/: bundle_manifest.json  report_index.json
artifacts/metrics/: ablation_results.md  bootstrap.csv  case_predictions.jsonl  case_summary.json  confusion_matrix.csv  error_taxonomy.md  hackathon_results.md  outcome.json  reproducibility.json  reproducibility.md  results.json
artifacts/records/: screen_bad_contract.jsonl  screen_bad_request.jsonl  screen_success.jsonl  skill_bio_guard.json  skill_bio_seq.json  (+2 more)
docs/: AIxBio_Hackathon_Execution_Package.md  BKT_Rubric_Draft.md  BioGuard_Technical_Specification.md  Execution_Gates.md  Fellowship_Implementation_Plan.md  Operational_Runbook.md  PUBLICATION_RESEARCH_NOTES.md  README.md  aixbio.tex  protocol_release_notes.md
skills/: README.md
spec/: benchmark_manifest_v1.0.json  bioguard_api.openapi.yaml  bkt_event.schema.json  execution_state_manifest_v1.0.json
(+47 files in other folders)
