[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bioguard"
version = "0.1.0"
description = "BioGuard MVP implementation for protocol-first biosecurity screening."
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.0"]

[project.scripts]
bioguard = "bioguard.cli:main"
